<resources>
    <string name="app_name">Sosio</string>
    <string name="eventImage">EventImage</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="large_text">

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">profileActivity</string>
    <string name="profile_picture_description">profile picture</string>
    <string name="profile_display_message">Welcome back!</string>
    <string name="profile_message_text">Have you earned enough points for your stay?</string>
    <string name="button_yes">Yes!</string>
    <string name="button_nope">Nope</string>
    <string name="number_of_points">Current points</string>
    <string name="number_of_points_val">220</string>
    <string name="title_activity_challenge_detail">ChallengeDetailActivity</string>
    <string name="challengeDetailTitle">Scan the Ibis object</string>
</resources>
