<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nl.jordyijsselstijn.sosio_dev.ChallengeActivity"
    android:background="@color/grey_500"
    android:padding="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipToPadding="false"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:elevation="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profilePicture"
                android:contentDescription="@string/profile_picture_description"
                android:src="@drawable/gregory_profile"
                android:layout_alignParentRight="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/profilePicture"
                android:weightSum="1"
                android:id="@+id/linearLayout3"
                android:layout_alignParentLeft="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_display_message"
                    android:id="@+id/profileTitle"
                    android:textStyle="bold"
                    android:textColor="@color/colorCoolAqua"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_message_text"
                    android:id="@+id/profileMessage"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignEnd="@+id/linearLayout3"
                android:id="@+id/linearLayout4">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_yes"
                    android:id="@+id/profileButtonYes"
                    android:background="#ffffff"
                    android:textColor="@color/colorCoolAqua" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_nope"
                    android:id="@+id/profileButtonNope"
                    android:background="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/profilePicture"
                android:layout_toEndOf="@+id/linearLayout3"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/number_of_points"
                    android:id="@+id/textView"
                    android:layout_below="@+id/profilePicture"
                    android:layout_toEndOf="@+id/linearLayout3" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorCoolAqua"
                    android:padding="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_points_val"
                        android:id="@+id/textView2"
                        android:textColor="#ffffff"
                        android:padding="5dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_stars_24dp"
                        android:tint="#ffffff" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/challengeListView"
        android:clipToPadding="false"
        android:layout_marginTop="10dp"
        android:background="#ffffff" />
</LinearLayout>
